[package]
name = "foton"
version = "0.1.0"
edition = "2021"
description = "Lightspeed photo management tool"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.5"
home = "0.5"
enum-iterator = "1.4"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
log = "0.4"
