[package]
name = "foton"
version = "0.1.0"
edition = "2021"
description = "Lightspeed photo management tool"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum-iterator = "1.4"
once_cell = "1.19"
chrono = "0.4"

# filesystem
walkdir = "2.5"
home = "0.5"

# CLI and config
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# logs
log = "0.4"
env_logger = "0.11"

# Media
exif = { version = "0.5", package = "kamadak-exif" }
# apt install -y pkg-config build-essential clang libavcodec-dev libavformat-dev libavutil-dev libavfilter-dev libavdevice-dev
ffmpeg-next = "7.0"


[profile.release]
lto = true
debug = "none"
